--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* Makefile.am: Add missing xlogo64 and xsnow files
+
 2005-07-11  Daniel Stone  <daniel@freedesktop.org>
 
 	* Initial autotooling.
